fix: track total hits when doing an elastic search query to get an accurate number of total hits, cleanup